新增实体类注解判断非空
