# project-entity/src/main/java/com/project/modules/cou/entity/CouWaresModelEntity.java
@@ -10,7 +10,7 @@ import java.io.Serializable;
 import java.util.Date;
 
 /**
- * 商品型号Entity
+ * 型号Entity
  *
  * @author liangyuding
  * @date 2020-04-17
@@ -21,21 +21,25 @@ import java.util.Date;
 public class CouWaresModelEntity implements Serializable {
     private static final long serialVersionUID = 5845556492979737006L;
 
-    /**商品型号ID*/
+    /**型号ID*/
     @TableId
-    @ApiModelProperty(value = "商品型号ID")
+    @ApiModelProperty(value = "型号ID")
     private Long couModelId;
 
-    /**商品型号名称*/
-    @ApiModelProperty(value = "商品型号名称")
+    /**型号名称*/
+    @ApiModelProperty(value = "型号名称")
     private String couModelName;
 
-    /**商品型号图片路径*/
-    @ApiModelProperty(value = "商品型号图片路径")
+    /**上级型号ID*/
+    @ApiModelProperty(value = "上级型号ID")
+    private Long parentId;
+
+    /**型号图片路径*/
+    @ApiModelProperty(value = "型号图片路径")
     private String image;
 
-    /**商品型号状态 0.禁用 1.正常*/
-    @ApiModelProperty(value = "商品型号状态 0.禁用 1.正常")
+    /**型号状态 0.禁用 1.正常*/
+    @ApiModelProperty(value = "型号状态 0.禁用 1.正常")
     private Integer status;
 
     /**创建者ID*/
